pxc/tests/test_109_fixed/dsp2.px
public namespace dsp2;
import common -;

println(make_darray_split{3}("abc:def:xyz", ':')); // error

